[package]
name = "panic-ext"
version = "2.1.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Extension library to panic facilities to make it more usable"
readme = "README.md"
repository = "https://github.com/DoumanAsh/panic-ext"
license = "BSL-1.0"
keywords = ["panic"]
categories = ["no-std"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[features]
# Enables String usage
alloc = []
# Enables std::error::Error impl
std = ["alloc"]
